# NYC-Taxi-Data-Pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
dbt/: dbt_project.yml  profiles.yml
dbt/models/mart/: mart_daily_trips.sql  mart_hourly_trips.sql  mart_models.yml  mart_tip_by_payment.sql  mart_trips_by_payment.sql
dbt/models/staging/: src_nyc_taxi.yml  stg_yellow_taxi.sql  stg_yellow_taxi.yml
orchestration/flows/: ingest.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/schemas/: yellow_taxi.json
